# MVE_cmake_import_std_clion

./: .gitignore  CMakeLists.txt  CMakePresets.json
